// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoResults should render NoResults with custom content 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  <div>
    Custom
  </div>
</div>
`;

exports[`NoResults should render a default NoResults 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  Terra.form.select.noResults
</div>
`;
